Mensagem de Alerta de Manutencao para visitantes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Tarcisio Valentim</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
+<script>
+    alert('Estamos Em Manutencao!');
+</script>
 <body>
     <header>
         <nav class="menu">
