--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarcisio Valentim</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/templete1.jpg">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/templete1.jpg">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <script>
