--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
                 console.log(cidades);
             </p>
         </div>
-
+    <div id="sfcy8am8unzs1ec44um2gj2d3gjb6bgmll9"></div>
+        <script type="text/javascript"
+            src="https://counter2.stat.ovh/private/counter.js?c=y8am8unzs1ec44um2gj2d3gjb6bgmll9&down=async" async></script>
+        <br><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas">Meu Portifolio no
+    Linkedin</a><noscript><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas"
+        title="contadores de visitas para blog"><img
+            src="https://counter2.stat.ovh/private/webcontadores.php?c=y8am8unzs1ec44um2gj2d3gjb6bgmll9" border="0"
+                 title="contadores de visitas para blog" alt="contadores de visitas para blog"></a></noscript>
     </header>
 </body>
 
