--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
     <header>
 
+        <input type="checkbox" id="bt_menu">
+        <label for="bt_menu">&#9776</label>
+
         <nav class="menu">
+
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Servicos</a>
