--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
 
-    alert('Estamos Em Manutencao!');
+    alert('Seja Bem-Vindo!'+'Estamos Em Construcao!');
 
     function typeWriter(elemento) {
         const textoAray = elemento.innerHTML.split('');
@@ -58,32 +58,21 @@
                 </li>
                 <li><a href="#">Contato</a>
                     <ul>
-                        <li><a href="#">Meu Linkedin</a></li>
-                        <li><a href="#">whatsApp</a></li>
+                        <li><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas">Meu Linkedin</a>
+                        </li>
+                        <li><a href="https://web.whatsapp.com/send?phone=5562997004940" target="_blank">Meu WhatsApp</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
 
         <div class="content">
+            <!--
             <h1>[ Ola, Mundo... </h1>
             <h2> Sou eu, TARCISIO]</h2>
+            -->
             <p>
-                var pessoa = {
-                nome: "Tarcisio",
-                profissao: 'programador',
-                cidade: 'Goiania',
-                uf: 'Go'
-                };
-
-                function novaPessoa(novoObjPessoa) {
-                if (typeof novoObjPessoa == 'object') {
-                pessoa = novoObjPessoa;
-                return true;
-                } else {
-                return false;
-                }
-                }
+                { Seja Bem-Vindo ao meu Site / Portifolio! }
             </p>
         </div>
 
@@ -91,14 +80,15 @@
         <script type="text/javascript"
             src="https://counter2.stat.ovh/private/counter.js?c=y8am8unzs1ec44um2gj2d3gjb6bgmll9&down=async"
             async></script>
-        <br><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas">Meu Portifolio no
-            Linkedin</a><noscript><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas"
+        <br><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas"></a><noscript><a href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas"
                 title="contadores de visitas para blog"><img
                     src="https://counter2.stat.ovh/private/webcontadores.php?c=y8am8unzs1ec44um2gj2d3gjb6bgmll9"
                     border="0" title="contadores de visitas para blog"
                     alt="contadores de visitas para blog"></a></noscript>
 
     </header>
+    <a href="https://web.whatsapp.com/send?phone=5562997004940" target="_blank"><img src="img/w64.png"
+            style="height:80px; position:fixed; bottom: 25px; left: 25px; z-index:100;" data-selector="img"></a>
 
 </body>
 
