Atualizando api do botao flutuante

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     alt="contadores de visitas para blog"></a></noscript>
 
     </header>
-    <a href="https://web.whatsapp.com/send?phone=5562997004940" target="_blank"><img src="img/w64.png"
+    <a href="https://api.whatsapp.com/send?phone=5562997004940&text=Ola, esse é o meu contato pessoal" target="_blank"><img src="img/w64.png"
             style="height:80px; position:fixed; bottom: 25px; left: 25px; z-index:100;" data-selector="img"></a>
 
 </body>
