--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <div class="about-content">
                 <h2 class="title">SOBRE MIM</h2>
                 <p>
-                    Ola, me chamo Tarcisio Valentim Araujo da Silva,
-                    moro na capital de Goias, sou tecnico em Telecomunicacoes desde de 2010, e em 2015 apos algumas
+                    Olá, me chamo Tarcisio Valentim Araújo da Silva,
+                    moro na capital de Goiás, sou técnico em Telecomunicações desde de 2010, e em 2015 após algumas
                     pesquisas sobre novas carreiras,
-                    fui apresentado ao mundo da programacao.
-                    Realizei varias metas para ininiar meus estudos, ja em 2018 pela Faculdade Senai - Fatesg, comecei
-                    minha nova tragetoria,
+                    fui apresentado ao mundo da programação.
+                    Realizei várias metas para iniciar meus estudos, já em 2018 pela Faculdade Senai - Fatesg, comecei
+                    minha nova trajetória,
                     sempre focando no que há de mais atualizado no mercado de trabalho.
                 </p>
 
                 <p>
-                    Atualmente pela Etelge Empreendiemntos, prestamos servicos e projetos terceirizados para operadora
+                    Atualmente pela Etelge Empreendiemntos, prestamos serviços e projetos terceirizados para operadora
                     Claro/Embratel. Mais
                     detalhes podem ser encontrados no meu <a
                         href="https://www.linkedin.com/in/tarcisioanalistadesenvolvedorsistemas" target="_blank"
