alteracao do link whatsapp
web para api

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- WhatsApp -->
     <script src="./js/scripts.js"></script>
 
-    <a href="https://web.whatsapp.com/send?phone=5562997004940" target="_blank"><img src="img/w64.png"
+    <a href="https://api.whatsapp.com/send?phone=5562997004940" target="_blank"><img src="img/w64.png"
             style="height:80px; position:fixed; bottom: 20px; left: 20px; z-index:100;" data-selector="img">
     </a>
 
