--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     moro na capital de Goiás, sou técnico em Telecomunicações desde 2010, e em 2015 após algumas
                     pesquisas sobre novas carreiras,
                     fui apresentado ao mundo da programação.
-                    Realizei várias metas para iniciar meus projetos e chegar em 2018, retornando aos estudos pela Faculdade Senai - Fatesg, 
-                    a partir dai comecei minha nova trajetória, sempre focando no que há de mais atualizado no mercado de trabalho.
+                    Realizei várias metas para iniciar meus projetos e chegar em 2018, retornar aos estudos pela Faculdade Senai - Fatesg, 
+                    a partir dai comecei minha nova trajetória, sempre focado no que há de mais atualizado no mercado de trabalho.
                 </p>
 
                 <p>
