--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <a target="_blank" href="https://twitter.com/tarcisio_valent">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="mailto:tarcisio.word@gmail.com">
+                <a href="mailto:tarcisio.jobs@outlook.com">
                     <i class="fas fa-at"></i>
                 </a>
             </div>
